exports[`ModalManger - app - should render the ModalManager with given AppDelegate as source 1`] = `
<div
  className="terraClinical-ModalManager">
  <TestContainer
    app={
      AppDelegateInstance {
        "disclose": [Function],
        "dismiss": [Function],
      }
    } />
  <Modal
    ariaLabel="Modal"
    classNameModal="terraClinical-ModalManager-modal terraClinical-ModalManager-modal--small"
    classNameOverlay={null}
    closeOnEsc={true}
    closeOnOutsideClick={false}
    isFullscreen={false}
    isOpen={false}
    isScrollable={false}
    onRequestClose={[Function]}
    role="document">
    <SlideGroup
      isAnimated={true}
      items={Array []} />
  </Modal>
</div>
`;

exports[`ModalManger - isMaximized - should render the ModalManager as maximized 1`] = `
<div
  className="terraClinical-ModalManager">
  <TestContainer
    app={
      AppDelegateInstance {
        "disclose": [Function],
      }
    } />
  <Modal
    ariaLabel="Modal"
    classNameModal="terraClinical-ModalManager-modal"
    classNameOverlay={null}
    closeOnEsc={true}
    closeOnOutsideClick={false}
    isFullscreen={true}
    isOpen={false}
    isScrollable={false}
    onRequestClose={[Function]}
    role="document">
    <SlideGroup
      isAnimated={true}
      items={Array []} />
  </Modal>
</div>
`;

exports[`ModalManger - isOpen - should render the ModalManager as open 1`] = `
<div
  className="terraClinical-ModalManager">
  <TestContainer
    app={
      AppDelegateInstance {
        "disclose": [Function],
      }
    } />
  <Modal
    ariaLabel="Modal"
    classNameModal="terraClinical-ModalManager-modal terraClinical-ModalManager-modal--small"
    classNameOverlay={null}
    closeOnEsc={true}
    closeOnOutsideClick={false}
    isFullscreen={false}
    isOpen={true}
    isScrollable={false}
    onRequestClose={[Function]}
    role="document">
    <SlideGroup
      isAnimated={true}
      items={Array []} />
  </Modal>
</div>
`;

exports[`ModalManger - modal components - should render the ModalManager with given modal contents 1`] = `
<div
  className="terraClinical-ModalManager">
  <TestContainer
    app={
      AppDelegateInstance {
        "disclose": [Function],
      }
    } />
  <Modal
    ariaLabel="Modal"
    classNameModal="terraClinical-ModalManager-modal terraClinical-ModalManager-modal--small"
    classNameOverlay={null}
    closeOnEsc={true}
    closeOnOutsideClick={false}
    isFullscreen={false}
    isOpen={true}
    isScrollable={false}
    onRequestClose={[Function]}
    role="document">
    <SlideGroup
      isAnimated={true}
      items={
        Array [
          <TestContainer
            app={
                AppDelegateInstance {
                    "closeDisclosure": [Function],
                    "disclose": [Function],
                    "dismiss": [Function],
                    "maximize": [Function],
                  }
            }
            display="NUMBER 1" />,
          <TestContainer
            app={
                AppDelegateInstance {
                    "closeDisclosure": [Function],
                    "disclose": [Function],
                    "dismiss": [Function],
                    "goBack": [Function],
                    "maximize": [Function],
                  }
            }
            display="NUMBER 2" />,
        ]
      } />
  </Modal>
</div>
`;

exports[`ModalManger - modal components - should render the ModalManager with given modal contents when components cannot be retrieved 1`] = `
<div
  className="terraClinical-ModalManager">
  <TestContainer
    app={
      AppDelegateInstance {
        "disclose": [Function],
      }
    } />
  <Modal
    ariaLabel="Modal"
    classNameModal="terraClinical-ModalManager-modal"
    classNameOverlay={null}
    closeOnEsc={true}
    closeOnOutsideClick={false}
    isFullscreen={true}
    isOpen={true}
    isScrollable={false}
    onRequestClose={[Function]}
    role="document">
    <SlideGroup
      isAnimated={true}
      items={
        Array [
          undefined,
          undefined,
        ]
      } />
  </Modal>
</div>
`;

exports[`ModalManger - modal components - should render the ModalManager with given modal contents when maximized 1`] = `
<div
  className="terraClinical-ModalManager">
  <TestContainer
    app={
      AppDelegateInstance {
        "disclose": [Function],
      }
    } />
  <Modal
    ariaLabel="Modal"
    classNameModal="terraClinical-ModalManager-modal"
    classNameOverlay={null}
    closeOnEsc={true}
    closeOnOutsideClick={false}
    isFullscreen={true}
    isOpen={true}
    isScrollable={false}
    onRequestClose={[Function]}
    role="document">
    <SlideGroup
      isAnimated={true}
      items={
        Array [
          <TestContainer
            app={
                AppDelegateInstance {
                    "closeDisclosure": [Function],
                    "disclose": [Function],
                    "dismiss": [Function],
                    "minimize": [Function],
                  }
            }
            display="NUMBER 1" />,
          <TestContainer
            app={
                AppDelegateInstance {
                    "closeDisclosure": [Function],
                    "disclose": [Function],
                    "dismiss": [Function],
                    "goBack": [Function],
                    "minimize": [Function],
                  }
            }
            display="NUMBER 2" />,
        ]
      } />
  </Modal>
</div>
`;

exports[`ModalManger - sizes - should render the ModalManager with huge size 1`] = `
<div
  className="terraClinical-ModalManager">
  <TestContainer
    app={
      AppDelegateInstance {
        "disclose": [Function],
      }
    } />
  <Modal
    ariaLabel="Modal"
    classNameModal="terraClinical-ModalManager-modal terraClinical-ModalManager-modal--huge"
    classNameOverlay={null}
    closeOnEsc={true}
    closeOnOutsideClick={false}
    isFullscreen={false}
    isOpen={false}
    isScrollable={false}
    onRequestClose={[Function]}
    role="document">
    <SlideGroup
      isAnimated={true}
      items={Array []} />
  </Modal>
</div>
`;

exports[`ModalManger - sizes - should render the ModalManager with large size 1`] = `
<div
  className="terraClinical-ModalManager">
  <TestContainer
    app={
      AppDelegateInstance {
        "disclose": [Function],
      }
    } />
  <Modal
    ariaLabel="Modal"
    classNameModal="terraClinical-ModalManager-modal terraClinical-ModalManager-modal--large"
    classNameOverlay={null}
    closeOnEsc={true}
    closeOnOutsideClick={false}
    isFullscreen={false}
    isOpen={false}
    isScrollable={false}
    onRequestClose={[Function]}
    role="document">
    <SlideGroup
      isAnimated={true}
      items={Array []} />
  </Modal>
</div>
`;

exports[`ModalManger - sizes - should render the ModalManager with medium size 1`] = `
<div
  className="terraClinical-ModalManager">
  <TestContainer
    app={
      AppDelegateInstance {
        "disclose": [Function],
      }
    } />
  <Modal
    ariaLabel="Modal"
    classNameModal="terraClinical-ModalManager-modal terraClinical-ModalManager-modal--medium"
    classNameOverlay={null}
    closeOnEsc={true}
    closeOnOutsideClick={false}
    isFullscreen={false}
    isOpen={false}
    isScrollable={false}
    onRequestClose={[Function]}
    role="document">
    <SlideGroup
      isAnimated={true}
      items={Array []} />
  </Modal>
</div>
`;

exports[`ModalManger - sizes - should render the ModalManager with small size 1`] = `
<div
  className="terraClinical-ModalManager">
  <TestContainer
    app={
      AppDelegateInstance {
        "disclose": [Function],
      }
    } />
  <Modal
    ariaLabel="Modal"
    classNameModal="terraClinical-ModalManager-modal terraClinical-ModalManager-modal--small"
    classNameOverlay={null}
    closeOnEsc={true}
    closeOnOutsideClick={false}
    isFullscreen={false}
    isOpen={false}
    isScrollable={false}
    onRequestClose={[Function]}
    role="document">
    <SlideGroup
      isAnimated={true}
      items={Array []} />
  </Modal>
</div>
`;

exports[`ModalManger - sizes - should render the ModalManager with tiny size 1`] = `
<div
  className="terraClinical-ModalManager">
  <TestContainer
    app={
      AppDelegateInstance {
        "disclose": [Function],
      }
    } />
  <Modal
    ariaLabel="Modal"
    classNameModal="terraClinical-ModalManager-modal terraClinical-ModalManager-modal--tiny"
    classNameOverlay={null}
    closeOnEsc={true}
    closeOnOutsideClick={false}
    isFullscreen={false}
    isOpen={false}
    isScrollable={false}
    onRequestClose={[Function]}
    role="document">
    <SlideGroup
      isAnimated={true}
      items={Array []} />
  </Modal>
</div>
`;

exports[`ModalManger should render the ModalManager with defaults 1`] = `
<div
  className="terraClinical-ModalManager">
  <TestContainer
    app={
      AppDelegateInstance {
        "disclose": [Function],
      }
    } />
  <Modal
    ariaLabel="Modal"
    classNameModal="terraClinical-ModalManager-modal terraClinical-ModalManager-modal--small"
    classNameOverlay={null}
    closeOnEsc={true}
    closeOnOutsideClick={false}
    isFullscreen={false}
    isOpen={false}
    isScrollable={false}
    onRequestClose={[Function]}
    role="document">
    <SlideGroup
      isAnimated={true}
      items={Array []} />
  </Modal>
</div>
`;
